Added github page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Angular Ribbon Directive
+title: Asana-style text ticker
 ---
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link href="src/asana-style-loader.css" rel="stylesheet">
 
-<h1>Asana style loader</h1>
+<h1>Asana-style text ticker</h1>
 <div id="textContainer"></div>
 
 <script src="src/asanaStyleLoader.js"></script>
