--- a/index-full.html
+++ b/index-full.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Asana style loader</title>
+        <title>Asana-style text ticker</title>
 
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="src/asana-style-loader.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 
     <body>
         <div class="container">
-            <h1>Asana style loader</h1>
+            <h1>Asana-style text ticker</h1>
             <div id="textContainer"></div>
         </div>
 
