--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@ title: Asana-style text ticker
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link href="src/asana-style-loader.css" rel="stylesheet">
 
-<h1>Asana-style text ticker</h1>
-<div id="textContainer"></div>
+
+
+
+
+
+
+
+<article class="markdown-body entry-content" itemprop="text">
+    <h1><a id="user-content-vertically-rotating-loading-text-ticker-in-style-of-asana" class="anchor" href="#vertically-rotating-loading-text-ticker-in-style-of-asana" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Vertically Rotating "Loading" Text Ticker in style of Asana</h1>
+
+<p>A Javascript library for rotating text messages in the style of Asana.com</p>
+
+<p>Useful for showing alternating "loading" messages or explain the steps of a process running while the user is waiting. </p>
+
+<h2><a id="user-content-demo" class="anchor" href="#demo" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Demo</em></h2>
+
+    <div id="textContainer"></div>
 
 <script src="src/asanaStyleLoader.js"></script>
 
@@ -35,3 +50,79 @@ title: Asana-style text ticker
         var asl = new AsanaStyleLoader("textContainer",params);
     });
 </script>
+
+
+<h2><a id="user-content-getting-started" class="anchor" href="#getting-started" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Getting started:</h2>
+
+<ul>
+<li>Include <code>asana-style-loader.css</code>:</li>
+</ul>
+
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">link</span> <span class="pl-e">href</span>=<span class="pl-s"><span class="pl-pds">"</span>css/asana-style-loader.css<span class="pl-pds">"</span></span> <span class="pl-e">rel</span>=<span class="pl-s"><span class="pl-pds">"</span>stylesheet<span class="pl-pds">"</span></span>&gt;</pre></div>
+
+<ul>
+<li>Include <code>asanaStyleLoader.js</code>:</li>
+</ul>
+
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>src/asanaStyleLoader.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
+
+<ul>
+<li>Add loader container DIV to your HTML:</li>
+</ul>
+
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">id</span>=<span class="pl-s"><span class="pl-pds">"</span>asanaLoader<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
+
+<ul>
+<li>Create new <code>AsanaStyleLoader</code> with container id as parameter : </li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> asl <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">AsanaStyleLoader</span>(<span class="pl-s"><span class="pl-pds">"</span>asanaLoader<span class="pl-pds">"</span></span>)</pre></div>
+
+<ul>
+<li>Optionally, you can pass parameters list when creating <code>AsanaStyleLoader</code>:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> params <span class="pl-k">=</span> {
+    messages<span class="pl-k">:</span> [
+        <span class="pl-s"><span class="pl-pds">"</span>sniffing around<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>getting focused<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>finding assets<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>pulling posts<span class="pl-pds">"</span></span>
+    ],
+    verticalSpacing<span class="pl-k">:</span> <span class="pl-c1">90</span>,
+    secondsPerSlide<span class="pl-k">:</span> <span class="pl-c1">1.5</span>
+};
+<span class="pl-k">var</span> asl <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">AsanaStyleLoader</span>(<span class="pl-s"><span class="pl-pds">"</span>asanaLoader<span class="pl-pds">"</span></span>,params)</pre></div>
+
+<h2><a id="user-content-attributes" class="anchor" href="#attributes" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Attributes:</h2>
+
+<p>AsanaStyleLoader(<code>containerElementId</code>,<code>params</code>)</p>
+
+<ul>
+<li><code>containerElementId</code> - Id for loader container</li>
+<li><code>params</code> - Configuration object. It can include:
+
+<ul>
+<li><code>messages</code> - array of messages</li>
+<li><code>verticalSpacing</code> - vertical spacing per one slide (<em>default: 90</em>)</li>
+<li><code>secondsPerSlide</code> - timeout between slides (<em>default: 1.5</em>) </li>
+</ul></li>
+</ul>
+
+<p><code>params</code> example:</p>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> params <span class="pl-k">=</span> {
+    messages<span class="pl-k">:</span> [
+        <span class="pl-s"><span class="pl-pds">"</span>sniffing around<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>getting focused<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>finding assets<span class="pl-pds">"</span></span>,
+        <span class="pl-s"><span class="pl-pds">"</span>pulling posts<span class="pl-pds">"</span></span>
+    ],
+    verticalSpacing<span class="pl-k">:</span> <span class="pl-c1">90</span>,
+    secondsPerSlide<span class="pl-k">:</span> <span class="pl-c1">1.5</span>
+}</pre></div>
+
+<h2><a id="user-content-contributing" class="anchor" href="#contributing" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Contributing</h2>
+
+<p>Pull requests are welcome!</p>
+</article>
